feat: iniciar estrutura do conteúdo main e conteúdo aside

--- a/css/global.css
+++ b/css/global.css
@@ -64,7 +64,15 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
     overflow: hidden;
+
+    color: var(--text-secondary);
+    font: var(--text);
 }
+
+h1, h2 {
+    color: var(--text-primary);
+}
+
 ol, ul {
 	list-style: none;
 }
@@ -79,4 +87,8 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+img {
+    max-width: 100%;
 }
