--- a/css/fields/index.css
+++ b/css/fields/index.css
@@ -1,3 +1,5 @@
+@import url(dropzone.css);
+
 input, textarea, select {
     appearance: none;
     border: 1px solid var(--stroke-default);
@@ -18,7 +20,8 @@ label {
 
 input:focus,
 textarea:focus,
-select:focus {
+select:focus,
+input[type="date"]:focus-within {
     outline: .25rem solid var(--surface-secondary);
     border: 1px solid var(--stroke-highliht);
     outline-offset: .1px;
