--- a/css/layout.css
+++ b/css/layout.css
@@ -1,15 +1,12 @@
 #app {
     display: grid;
     grid-template-columns: 51.25% 48.75%;
-
-    height: 100vh;
 }
 
 main {
     overflow: auto;
     padding: 4rem;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
+    width: 100%;
 
     .main-container {
         max-width: 33rem;
@@ -33,12 +30,17 @@ aside {
     padding: 4rem;
     background-color: var(--surface-secondary);
     overflow: hidden;
+    height: 100vh;
+    position: fixed;
+    right: 0;
+    width: 48.75%;
 
     .aside-container {
         max-width: 31rem;
 
-        >img {
+        > img {
             margin-top: 2rem;
+            width: fit-content;
         }
     }
 
