--- a/css/fields/index.css
+++ b/css/fields/index.css
@@ -1,97 +1,3 @@
+@import url(inputs.css);
 @import url(dropzone.css);
-
-input, textarea, select {
-    appearance: none;
-    border: 1px solid var(--stroke-default);
-    width: 100%;
-    border-radius: .5rem;
-
-    padding: .75rem 1rem;
-    font: var(--text);
-}
-
-label {
-    font: var(--text-sm);
-    color: var(--text-secondary);
-
-    display: block;
-    margin-bottom: .25rem;
-}
-
-input:focus,
-textarea:focus,
-select:focus,
-input[type="date"]:focus-within {
-    outline: .25rem solid var(--surface-secondary);
-    border: 1px solid var(--stroke-highliht);
-    outline-offset: .1px;
-}
-
-input[type="date"] {
-    position: relative;
-
-    &::-webkit-calendar-picker-indicator {
-        opacity: 0;
-    } 
-
-    &::before {
-        content: "";
-        position: absolute;
-        background: url(../../assets/icons/calendar-03.svg) center/contain;
-        right: 1rem;
-        width: 1.25rem;
-        height: 1.25rem;
-
-        top: 50%;
-        transform: translateY(-50%);
-    }
-}
-
-select {
-    background: url(../../assets/icons/arrow-down-01.svg) no-repeat calc(100% - 1rem);
-}
-
-.address > div {
-    gap: 1.25rem;
-}
-
-.input-wrapper:has([disabled]) {
-    opacity: .5;
-}
-
-input {
-    &[disabled] {
-        background-color: var(--surface-disabled);
-
-        border: 1px solid var(--stroke-default);
-        color: var(--text-primary);
-    }
-
-    & + small {
-        font: var(--text-sm);
-        color: #78716C;
-
-        display: inline-block;
-        margin-top: .25rem;
-    }
-
-    &:invalid {
-        border: .125rem solid var(--semantic-error);
-    }
-
-    &[required] + .error {
-        display: flex;
-        color: var(--semantic-error);
-        gap: .25rem;
-        align-items: center;
-
-        font: var(--text-sm);
-
-        margin-top: .25rem;
-    }
-
-    &:not(:focus):valid + .error {
-        display: none;
-    }
-
-}
+@import url(radio.css);
